--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="forum.jiangyouluntan.com.videocropdemo.MainActivity">
 
-    <TextView
+    <forum.jiangyouluntan.com.videocropdemo.listVideo.widget.TextureVideoView
+        android:id="@+id/videoView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_height="wrap_content" />
 </RelativeLayout>
