--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
         />
     
     <forum.jiangyouluntan.com.videocropdemo.TwoSideSeekBar.TwoSideSeekBar
+        android:id="@+id/seekBar"
         android:layout_width="match_parent"
         android:layout_height="42dp"
         android:layout_alignParentBottom="true"
