--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,47 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="forum.jiangyouluntan.com.videocropdemo.MainActivity">
+    android:orientation="vertical"
+    android:layout_height="match_parent">
 
-    <forum.jiangyouluntan.com.videocropdemo.listVideo.widget.TextureVideoView
-        android:id="@+id/videoView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
 
     <Button
-        android:id="@+id/btn_crop"
+        android:id="@+id/btn_FFmpegAndroidLibraryActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/videoView"
-        android:text="视频裁剪"
-        android:onClick="crop"
-        />
+        android:textAllCaps="false"
+        android:text="FFmpegAndroidLibraryActivity" />
 
     <Button
+        android:id="@+id/btn_"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/videoView"
-        android:layout_toRightOf="@+id/btn_crop"
-        android:text="图片截图"
-        android:onClick="getImage"
-        />
+        android:textAllCaps="false"
+        android:text="FFmpegAndroidLibraryActivity" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="42dp"
-        android:layout_alignParentBottom="true"
-        />
-    
-    <forum.jiangyouluntan.com.videocropdemo.TwoSideSeekBar.TwoSideSeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="match_parent"
-        android:layout_height="42dp"
-        android:layout_alignParentBottom="true"
-        />
-
-</RelativeLayout>
+</LinearLayout>
