--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,11 @@
         android:textAllCaps="false"
         android:text="androidffmpeglibrary" />
 
+    <Button
+        android:id="@+id/btn_FFmpegAndroidLibraryGetAllImageActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAllCaps="false"
+        android:text="FFmpegAndroidLibraryGetAllImageActivity" />
+
 </LinearLayout>
