--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,4 +33,11 @@
         android:text="MediaCodecActivity" />
 
 
+
+    <Button
+        android:id="@+id/btn_MediaCodecActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAllCaps="false"
+        android:text="MediaCodecActivity" />
 </LinearLayout>
