--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,5 +53,12 @@
         android:layout_height="wrap_content"
         android:text="FFmpegMediaMetadataRetrieverActivity"
         android:textAllCaps="false" />
+    <Button
+        android:id="@+id/btn_MediaMetadataRetrieverVideoViewActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="MediaMetadataRetrieverVideoViewActivity"
+        android:textAllCaps="false" />
+
 
 </LinearLayout>
