--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,5 +60,10 @@
         android:text="MediaMetadataRetrieverVideoViewActivity"
         android:textAllCaps="false" />
 
-
+    <Button
+        android:id="@+id/btn_End"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="EndProject"
+        android:textAllCaps="false" />
 </LinearLayout>
