--- a/app/src/main/res/layout/activity_mediametadataretriever.xml
+++ b/app/src/main/res/layout/activity_mediametadataretriever.xml
@@ -9,8 +9,7 @@
     <forum.jiangyouluntan.com.videocropdemo.listVideo.widget.TextureVideoView
         android:id="@+id/videoView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
