--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,6 +90,13 @@
             android:textAllCaps="false" />
 
         <Button
+            android:id="@+id/btn_cropVideo2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="压缩视频WithAndroidFFmpegLibrary"
+            android:textAllCaps="false" />
+
+        <Button
             android:id="@+id/btn_otherCrop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
